# baselibs

./: Makefile  Makefile.bazel  UNCOMPILED_FILES_ANALYSIS.md  score-baselibs.spec
score/memory/: Makefile  Makefile.native
score/memory/shared/: shared_memory_resource.cpp
score/mw/: Makefile
score/os/: ObjectSeam.h  mman.cpp  mqueue.cpp  unistd.cpp
score/result/details/expected/: expected.h
score/utils/: Makefile
